# OptimizedStorage

./: CMakeLists.txt  Makefile  README.md  files.cpp  storage.cpp  write.hpp  writes.cpp
src/communication/: general.hpp
src/filesystem/: buffer_management.cpp  buffer_management.hpp
src/storage/: read_manager.cpp  read_manager.hpp  read_write.cpp  read_write.hpp  write_manager.cpp  write_manager.hpp
